--- a/pgs/quiz-active.html
+++ b/pgs/quiz-active.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <title>Take Quiz</title>
+    <title>SC Trivia - Quiz</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
-    <script src="../test.js"></script>
-    <script src="../cpt/functions.js"></script>
-    <script src="../cpt/question-data.js"></script>
+    <script src="../js/functions.js" defer></script>
+    <script src="../js/question-data.js" defer></script>
     <link rel="icon" type="favicon" href="../img/survivalcraft.ico">
 </head>
 <body>
@@ -32,6 +31,7 @@
             </div>
         </div>
     </main>
+
     <footer>
     </footer>
 </body>
