--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
     <script src="../js/functions.js" defer></script>
-    <script src="../js/question-data.js" defer></script>
+    <script src="../js/save.js" defer></script>
+    <script src="../js/data.js" defer></script>
     <link rel="icon" type="favicon" href="../img/survivalcraft.ico">
 </head>
 <body>
@@ -25,8 +26,6 @@
             </div>
             <div>
                 <input class="continue-button" type="button" id="continue" value="Continue" onclick="continueQuiz(this.id)"></input>
-            </div>
-            <div>
                 <input class="quit-button" type="button" id="quit" value="Quit" onclick="stopQuiz(this.id)"></input>
             </div>
         </div>
