--- a/tst/save_1.html
+++ b/tst/save_1.html
@@ -13,9 +13,11 @@
         </nav>
     </header>
     <main>
-        <input id="save" type="button" value="Save" onclick="saveData(this.id)"></input>
-        <input id="read" type="button" value="Read" onclick="readData(this.id)"></input>
-        <input id="clear" type="button" value="Clear" onclick="clearData(this.id)"></input>
+        <h2>Page 1</h2>
+        <input id="start_test" type="button" value="Change" onclick="startQuiz()"></input>
+        <input id="save" type="button" value="Save" onclick=""></input>
+        <input id="read" type="button" value="Read" onclick=""></input>
+        <input id="clear" type="button" value="Clear" onclick=""></input>
     </main>
     <footer>
     </footer>
