--- a/pgs/options.html
+++ b/pgs/options.html
@@ -7,6 +7,7 @@
     <script src="../js/functions.js" defer></script>
     <script src="../js/data.js" defer></script>
     <script src="../js/save.js" defer></script>
+    <script type="module" src="../js/import.js"></script>
     <link rel="icon" type="favicon" href="../img/survivalcraft.ico">
 </head>
 <body>
