--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
-    <script src="../js/functions.js" defer></script>
-    <script src="../js/save.js" defer></script>
-    <script src="../js/data.js" defer></script>
-    <script type="module" src="../js/import.js"></script>
+    <script src="../js/Quiz_Actions.js" defer></script>
+    <script src="../js/Quiz_Initialize.js" defer></script>
+    <script src="../js/Quiz_Save.js" defer></script>
+    <script type="module" src="../js/Quiz_Data.js"></script>
     <link rel="icon" type="favicon" href="../img/survivalcraft.ico">
 </head>
 <body>
