--- a/pgs/options.html
+++ b/pgs/options.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
-    <script src="../js/Quiz_Actions.js" defer></script>
-    <script src="../js/Quiz_Initialize.js" defer></script>
-    <script src="../js/Quiz_Save.js" defer></script>
-    <script type="module" src="../js/Quiz_Data.js"></script>
+     <script src="../js/quizActions.js" defer></script>
+    <script src="../js/initializeQuiz.js" defer></script>
+    <script src="../js/updateLocalStorage.js" defer></script>
+    <script src="../js/generateQuestion.js" defer></script>
+    <script type="module" src="../js/lookupQuestionData.js" defer></script>
     <link rel="icon" type="favicon" href="../img/survivalcraft.ico">
 </head>
 <body>
