--- a/pgs/options.html
+++ b/pgs/options.html
@@ -33,11 +33,13 @@
         <h3>Question Category</h3>
         <p>Determines what topics questions will cover.</p>
         <div>
-            <input class="option-button" id="category_1" type="button" value="General" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="category_1" type="button" value="General Knowledge" onclick="initializeQuiz(this.id)"></input>
             <input class="option-button" id="category_2" type="button" value="Game Mechanics" onclick="initializeQuiz(this.id)"></input>
             <input class="option-button" id="category_3" type="button" value="Crafting Recipes" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="category_4" type="button" value="Updates History" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="category_5" type="button" value="Electrics" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="category_4" type="button" value="Creature Behaviors" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="category_5" type="button" value="Blocks and Pickables" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="category_6" type="button" value="Updates History" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="category_7" type="button" value="Electrics" onclick="initializeQuiz(this.id)"></input>
         </div>
         <div style="margin-top: 10px">
             <input class="option-button" id="category_rdm" type="button" value="RANDOM" onclick="initializeQuiz(this.id)"></input>
