--- a/pgs/options.html
+++ b/pgs/options.html
@@ -21,56 +21,102 @@
         <h3>Difficulty Tier</h3>
         <p>Determines the difficulty of each question.</p>
         <div>
-            <input class="option-button" id="tier_1" type="button" value="Beginner" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="tier_2" type="button" value="Intermediate" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="tier_3" type="button" value="Experienced" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="tier_4" type="button" value="Veteran" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="tier_1" type="button" value="Beginner"
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="tier_2" type="button" value="Intermediate" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="tier_3" type="button" value="Experienced" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="tier_4" type="button" value="Veteran" 
+                onclick="initializeQuiz(this.id)">
+            </input>
         </div>
-        <div style="margin-top: 10px">
-            <input class="option-button" id="tier_rdm" type="button" value="RANDOM" onclick="initializeQuiz(this.id)"></input>
+        <div>
+            <input class="option-button" id="tier_rdm" type="button" value="RANDOM" 
+                onclick="initializeQuiz(this.id)">
+            </input>
         </div>
 
         <h3>Question Category</h3>
         <p>Determines what topics questions will cover.</p>
         <div>
-            <input class="option-button" id="category_1" type="button" value="General Knowledge" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="category_2" type="button" value="Game Mechanics" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="category_3" type="button" value="Crafting Recipes" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="category_4" type="button" value="Creature Behaviors" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="category_5" type="button" value="Blocks and Pickables" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="category_6" type="button" value="Updates History" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="category_7" type="button" value="Electrics" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="category_1" type="button" value="General Knowledge" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="category_2" type="button" value="Game Mechanics" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="category_3" type="button" value="Crafting Recipes" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="category_4" type="button" value="Creature Behaviors" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="category_5" type="button" value="Blocks and Pickables" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="category_6" type="button" value="Updates History" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="category_7" type="button" value="Electrics" 
+                onclick="initializeQuiz(this.id)">
+            </input>
         </div>
-        <div style="margin-top: 10px">
-            <input class="option-button" id="category_rdm" type="button" value="RANDOM" onclick="initializeQuiz(this.id)"></input>
+        <div>
+            <input class="option-button" id="category_rdm" type="button" value="RANDOM" 
+                onclick="initializeQuiz(this.id)">
+            </input>
         </div>
 
         <h3>Question Count</h3>
         <p>Determines the total number of questions.</p>
         <div>
-            <input class="option-button" id="length_1" type="button" value="Low" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="length_2" type="button" value="Medium" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="length_3" type="button" value="High" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="length_1" type="button" value="Low" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="length_2" type="button" value="Medium" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="length_3" type="button" value="High" 
+                onclick="initializeQuiz(this.id)">
+            </input>
         </div>
-        <div style="margin-top: 10px">
-            <input class="option-button" id="length_rdm" type="button" value="RANDOM" onclick="initializeQuiz(this.id)"></input>
+        <div>
+            <input class="option-button" id="length_rdm" type="button" value="RANDOM" 
+                onclick="initializeQuiz(this.id)">
+            </input>
         </div>
 
         <h3>Time Limit</h3>
         <p>Determines the amount of time allotted.</p>
         <div>
-            <input class="option-button" id="duration_1" type="button" value="Easy" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="duration_2" type="button" value="Medium" onclick="initializeQuiz(this.id)"></input>
-            <input class="option-button" id="duration_3" type="button" value="Hard" onclick="initializeQuiz(this.id)"></input>
+            <input class="option-button" id="duration_1" type="button" value="Easy" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="duration_2" type="button" value="Medium" 
+                onclick="initializeQuiz(this.id)">
+            </input>
+            <input class="option-button" id="duration_3" type="button" value="Hard" 
+                onclick="initializeQuiz(this.id)">
+            </input>
         </div>
-        <div style="margin-top: 10px">
-            <input class="option-button" id="duration_none" type="button" value="NONE" onclick="initializeQuiz(this.id)"></input>
+        <div>
+            <input class="option-button" id="duration_none" type="button" value="NONE" 
+                onclick="initializeQuiz(this.id)">
+            </input>
         </div>
 
         <h3>Start Quiz</h3>
         <div>
-            <input class="start-button" type="button" id="start" value="Start" onclick="startQuiz()"></input>
-            <input class="back-button" type="button" id="back" value="Back" onclick="stopQuiz()"></input>
+            <input class="start-button" type="button" id="start" value="Start" 
+                onclick="startQuiz()">
+            </input>
+            <input class="back-button" type="button" id="back" value="Back" 
+                onclick="stopQuiz()">
+            </input>
         </div>
     </main>
     <footer>
