--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -19,12 +19,12 @@
     <main>
         <div>
             <h2>Survivalcraft Trivia</h2>
-            <p id="question">null</p>
+            <p class="placeholder-text" id="question">null</p>
             <div>
-                <input class="choice-button" type="button" id="choice_1" value="" onclick="gradeQuiz(this.id)"></input>
-                <input class="choice-button" type="button" id="choice_2" value="" onclick="gradeQuiz(this.id)"></input>
-                <input class="choice-button" type="button" id="choice_3" value="" onclick="gradeQuiz(this.id)"></input>
-                <input class="choice-button" type="button" id="choice_4" value="" onclick="gradeQuiz(this.id)"></input>
+                <input class="choice-button" type="button" id="choice_1" value="null" onclick="gradeQuiz(this.id)"></input>
+                <input class="choice-button" type="button" id="choice_2" value="null" onclick="gradeQuiz(this.id)"></input>
+                <input class="choice-button" type="button" id="choice_3" value="null" onclick="gradeQuiz(this.id)"></input>
+                <input class="choice-button" type="button" id="choice_4" value="null" onclick="gradeQuiz(this.id)"></input>
             </div>
             <div>
                 <input class="continue-button" type="button" id="continue" value="Continue" onclick="continueQuiz(this.id)"></input>
