--- a/pgs/options.html
+++ b/pgs/options.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <title>SC Trivia - Quiz Options</title>
+    <title>SC Trivia - Quiz Setup</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
     <script src="../js/index.js" defer></script>
-    <script src="../js/Session.js" defer></script>
+    <script src="../js/session.js" defer></script>
     <script type="module" src="../js/parser.js" defer></script>
     <link rel="icon" type="favicon" href="../img/survivalcraft.ico">
 </head>
@@ -15,106 +15,119 @@
         </nav>
     </header>
     <main>
-        <h2>Quiz Options</h2>
+        <h2>Setup Quiz</h2>
         <h3>Difficulty Tier</h3>
-        <p>Determines the difficulty of each question.</p>
+        <p>Determines the average difficulty of each question.</p>
         <div>
-            <input class="option-button" id="tier_1" type="button" value="Beginner"
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-tier" id="tier_1" type="button" value="Beginner"
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="tier_2" type="button" value="Intermediate" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-tier" id="tier_2" type="button" value="Intermediate" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="tier_3" type="button" value="Experienced" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-tier" id="tier_3" type="button" value="Experienced" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="tier_4" type="button" value="Veteran" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-tier" id="tier_4" type="button" value="Veteran" 
+                onclick="initializeSetup(this.id)">
+            </input>
+            <input class="btn-tier-rdm" id="tier_5" type="button" value="RANDOM" 
+                onclick="initializeSetup(this.id)">
             </input>
         </div>
         <div>
-            <input class="option-button" id="tier_rdm" type="button" value="RANDOM" 
-                onclick="initializeQuiz(this.id)">
-            </input>
+            <p style="font-size: 0.75rem">* Selecting Random will choose a random difficulty tier upon start.</p>
         </div>
 
         <h3>Question Category</h3>
         <p>Determines what topics questions will cover.</p>
         <div>
-            <input class="option-button" id="category_1" type="button" value="General Knowledge" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-category" id="ctgr_1" type="button" value="General Knowledge" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="category_2" type="button" value="Game Mechanics" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-category" id="ctgr_2" type="button" value="Game Mechanics" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="category_3" type="button" value="Crafting Recipes" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-category" id="ctgr_3" type="button" value="Crafting Recipes" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="category_4" type="button" value="Creature Behaviors" 
-                onclick="initializeQuiz(this.id)">
-            </input>
-            <input class="option-button" id="category_5" type="button" value="Blocks and Pickables" 
-                onclick="initializeQuiz(this.id)">
-            </input>
-            <input class="option-button" id="category_6" type="button" value="Updates History" 
-                onclick="initializeQuiz(this.id)">
-            </input>
-            <input class="option-button" id="category_7" type="button" value="Electrics" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-category" id="ctgr_4" type="button" value="Creature Behaviors" 
+                onclick="initializeSetup(this.id)">
             </input>
         </div>
         <div>
-            <input class="option-button" id="category_rdm" type="button" value="RANDOM" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-category" id="ctgr_5" type="button" value="Blocks and Pickables" 
+                onclick="initializeSetup(this.id)">
             </input>
+            <input class="btn-category" id="ctgr_6" type="button" value="Updates History" 
+                onclick="initializeSetup(this.id)">
+            </input>
+            <input class="btn-category" id="ctgr_7" type="button" value="Electrics" 
+                onclick="initializeSetup(this.id)">
+            </input>
+            <input class="btn-category-rdm" id="ctgr_8" type="button" value="RANDOM" 
+                onclick="initializeSetup(this.id)">
+            </input>
+        </div>
+        <div>
+            <p style="font-size: 0.75rem">* Selecting Random will choose a random category every question.</p>
         </div>
 
         <h3>Question Count</h3>
         <p>Determines the total number of questions.</p>
         <div>
-            <input class="option-button" id="length_1" type="button" value="Low" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-length" id="lgth_1" type="button" value="Low" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="length_2" type="button" value="Medium" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-length" id="lgth_2" type="button" value="Medium" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="length_3" type="button" value="High" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-length" id="lgth_3" type="button" value="High" 
+                onclick="initializeSetup(this.id)">
+            </input>
+            <input class="btn-length-rdm" id="lgth_4" type="button" value="RANDOM" 
+                onclick="initializeSetup(this.id)">
             </input>
         </div>
         <div>
-            <input class="option-button" id="length_rdm" type="button" value="RANDOM" 
-                onclick="initializeQuiz(this.id)">
-            </input>
+            <p style="font-size: 0.75rem">* Selecting Random will choose a random question count upon start.</p>
         </div>
 
         <h3>Time Limit</h3>
         <p>Determines the amount of time allotted.</p>
         <div>
-            <input class="option-button" id="duration_1" type="button" value="Easy" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-duration" id="drtn_1" type="button" value="Easy" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="duration_2" type="button" value="Medium" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-duration" id="drtn_2" type="button" value="Medium" 
+                onclick="initializeSetup(this.id)">
             </input>
-            <input class="option-button" id="duration_3" type="button" value="Hard" 
-                onclick="initializeQuiz(this.id)">
+            <input class="btn-duration" id="drtn_3" type="button" value="Hard" 
+                onclick="initializeSetup(this.id)">
+            </input>
+            <input class="btn-duration" id="drtn_4" type="button" value="None" 
+                onclick="initializeSetup(this.id)">
+            </input>
+            <input class="btn-duration-rdm" id="drtn_5" type="button" value="RANDOM" 
+                onclick="initializeSetup(this.id)">
             </input>
         </div>
         <div>
-            <input class="option-button" id="duration_none" type="button" value="NONE" 
-                onclick="initializeQuiz(this.id)">
-            </input>
+            <p style="font-size: 0.75rem">* Selecting Random will choose a random time limit upon start.</p>
         </div>
 
         <h3>Start Quiz</h3>
         <div>
-            <input class="start-button" type="button" id="start" value="Start" 
+            <input class="btn-start" type="button" id="start" value="Start" 
                 onclick="startQuiz()">
             </input>
-            <input class="back-button" type="button" id="back" value="Back" 
+            <input class="btn-exit" type="button" id="back" value="Back" 
                 onclick="exitSetup()">
+            </input> 
+            <input class="btn-reset" type="button" id="reset" value="Reset" 
+                onclick="resetSetup()">
             </input>
+            <p style="font-size: 0.75rem">* Click Reset to clear all selected options.</p>
         </div>
     </main>
     <footer>
