--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
     <script src="../js/index.js" defer></script>
-    <script src="../js/Session.js" defer></script>
+    <script src="../js/session.js" defer></script>
     <script type="module" src="../js/parser.js" defer></script>
     <link rel="icon" type="favicon" href="../img/survivalcraft.ico">
 </head>
