--- a/pgs/options.html
+++ b/pgs/options.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <title>SC Trivia - Quiz Setup</title>
+    <title>Survivalcraft Trivia - Setup</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css"/>
     <script src="../js/index.js" defer></script>
     <script src="../js/session.js" defer></script>
     <script type="module" src="../js/parser.js" defer></script>
-    <link rel="icon" type="favicon" href="../img/survivalcraft.ico">
+    <link rel="icon" type="favicon" href="../img/site-favicon.ico">
 </head>
 <body>
     <header>
