--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <head>
-    <title>SC Trivia - Home</title>
+    <title>Survivalcraft Trivia - Home</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css"/>
-    <link rel="icon" type="favicon" href="img/survivalcraft.ico">
+    <link rel="icon" type="favicon" href="img/site-favicon.ico">
+    <script src="js/class_Session.js" defer></script>
+    <script src="js/cpt_documentLoader.js" defer></script>
+    <script type="module" src="js/cpt_jsonParser.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script></script>
 </head>
 <body>
-    <header>
-        <nav>
-        </nav>
-    </header>
     <main>
+        <p id="p-test">Test</p>
     </main>
-    <footer>
-    </footer>
 </body>
 <html>
