--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="icon" type="favicon" href="img/site-favicon.ico">
-    <script src="js/class_Session.js" defer></script>
-    <script src="js/cpt_documentLoader.js" defer></script>
-    <script type="module" src="js/cpt_jsonParser.js" defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
+    <script type="module" src="js/json-parser.js" defer></script>
+    <script src="js/session.js" defer></script>
+    <script src="js/document-loader.js" defer></script>
+    <script src="js/main-file.js" defer></script>
 </head>
 <body>
-    <main>
+    <div id="loading-container_setup" class="loading">
         <p id="p-test">Test</p>
-    </main>
+        <span id="span-test">Test</span>
+    </div>
+
+    <div class="setup-button-group_1">
+        <input class="" id="" type="button" value="Button 1"></input>
+    </div>
+
+    <div class="setup-button-group_2">
+        <input class="" id="" type="button" value="Button 2"></input>
+    </div>
+
+    <input class="" type="button" id="btn-start" value="Start"></input>
 </body>
 <html>
